Totally changed the UI for Apollo to fix the theme of the new logo. Enjoy!

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Apollo — All-in-one marathon training: popular plans (Hal Higdon, Hanson's), day-by-day checklist, Strava & Garmin." />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <meta name="description" content="Apollo — Legendary marathon training companion. Popular plans, Strava sync, race predictions, and coaching insights." />
+    <meta name="theme-color" content="#0D1B2A" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/logo-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <title>Apollo — Marathon Training</title>
   </head>
   <body>
